recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: identifier expected but ':' found.
    forward(100.:Double)
                ^FourSquare:5: error: identifier expected but ':' found.
    forward(100.:Double)
                ^FourSquare:7: error: identifier expected but ':' found.
    forward(100.:Double)
                ^FourSquare:9: error: identifier expected but ':' found.
    forward(100.:Double)
                ^FourSquare:15: error: identifier expected but ':' found.
  forward(100.:Double)
              ^FourSquare:20: error: identifier expected but ':' found.
  forward(100.:Double)
              ^FourSquare:23: error: identifier expected but ':' found.
  forward(100.:Double)
              ^FourSquare:26: error: identifier expected but ':' found.
  forward(100.:Double)
              ^