recursion.logo.square.FourSquare.scala.code
override def run() {
  def square(){
    forward(100.:Double)
    left()
    forward(100.:Double)
    left()
    forward(100.:Double)
    left()
    forward(100.:Double)
    left()
  }
  square()
  left()
  left()
  forward(100.:Double)
  left()
  left()
  square()
  right()
  forward(100.:Double)
  left()
  square()
  forward(100.:Double)
  square()
  left()
  forward(100.:Double)
  right()
}